tests/baselines/reference/ambientErrors1.errors.txt
ambientErrors1.ts(1,17): error TS1039: Initializers are not allowed in ambient contexts.


==== ambientErrors1.ts (1 errors) ====
    declare var x = 4;
                    ~
!!! error TS1039: Initializers are not allowed in ambient contexts.